# VideoProcessingFramework

./: CMakeLists.txt  SampleTranscode.py
OpenCVNvCodec/: CMakeLists.txt
OpenCVNvCodec/src/: CMakeLists.txt
